--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,14 +1,16 @@
 spring:
   datasource:
-    url: jdbc:h2:file:/data/demo
+    url: jdbc:h2:file:/data/test
     username: sa
     password: password
     driverClassName: org.h2.Driver
   h2:
     console.enabled: true
   liquibase:
-    enabled: true
+    enabled: false
     changeLog: classpath:db/changelog/dbchangelog.xml
   jpa:
     spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
-
+    hibernate:
+      ddl-auto: update
+    defer-datasource-initialization: true
